--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
   </style> -->
 </head>
 <body>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
+<section>
+  <img src="./assets/images/avatar-jessica.jpeg" alt="image of Jessica Randall">
+  <h1>Jessica Randall</h1>
+  <p class="yellow">London, United Kingdom</p>
+  <P class="smallText">"Front-end developer and avid reader."</P>
+  <ul>
+    <li>GitHub</li>
+    <li>Frontend Mentor</li>
+    <li>LinkedIn</li>
+    <li>Twitter</li>
+    <li>Instagram</li>
+  </ul>
+  </section>
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
