--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   <p class="yellow">London, United Kingdom</p>
   <P class="smallText">"Front-end developer and avid reader."</P>
   <ul>
-    <li>GitHub</li>
-    <li>Frontend Mentor</li>
-    <li>LinkedIn</li>
-    <li>Twitter</li>
-    <li>Instagram</li>
+    <li><a href="#">GitHub</a></li>
+    <li><a href="#">Frontend Mentor</a></li>
+    <li><a href="#">LinkedIn</a></li>
+    <li><a href="#">Twitter</a></li>
+    <li><a href="#">Instagram</a></li>
   </ul>
   </section>
   <!-- <div class="attribution">
